<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white" >

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                style="@style/CustomTextView"
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prompt_title"
                />
            <EditText
                style="@style/CustomEditText"
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:inputType="textCapWords"
                android:background="@drawable/edit_white_background"
                />

            <TextView
                style="@style/CustomTextView"
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_form_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prompt_description"
                />
            <EditText
                style="@style/CustomEditText"
                android:id="@+id/edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/edit_white_background"
                android:inputType="number"
                android:minLines="2"
                />

            <TextView
                style="@style/CustomTextView"
                android:id="@+id/text_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_form_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prompt_priority"
                />
            <EditText
                style="@style/CustomEditText"
                android:id="@+id/edit_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/edit_white_background"
                android:focusable="false"
                android:drawableRight="@drawable/ic_arrow_right_black"
                android:inputType="none"
                />
            <TextView
                style="@style/CustomTextView"
                android:id="@+id/text_end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_form_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/prompt_end_date"
                />
            <EditText
                style="@style/CustomEditText"
                android:id="@+id/edit_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:focusable="false"
                android:inputType="none"
                android:background="@drawable/edit_white_background"
                />


            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_form_margin"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:background="@drawable/btn_cicle_border"
                android:text="@string/action_save"
                android:textSize="@dimen/button_text_size"
                android:textColor="#ffffff"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>